# gravity

./: .gitignore  Cargo.toml  README.md  build.sh  gravity.css  index.html  index.js
src/: barnes-hut.rs  main.rs  new_main.rs
