[package]
name = "gravity"
version = "0.1.0"
authors = ["Matt Young <dev@mttyng.com>"]
edition = "2018"

[dependencies]
js-sys = "0.3.0"
wasm-bindgen = { version = "0.2.23", features = ["nightly"] }

[dependencies.web-sys]
web-sys = { version = "0.3.0" }
features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'DomRect',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'Node',
  'Window',
  'console',
]
